--- a/index.html
+++ b/index.html
@@ -12,22 +12,57 @@
 
   <style>
     html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
-    #renderCanvas { width: 100%; height: 100%; display:block; }
+    #renderCanvas { width: 100%; height: 100%; display:block; touch-action: none; }
     #adminPanel { position: absolute; top: 10px; left: 10px; background: rgba(0,0,0,0.6); color: white; padding: 10px; border-radius: 8px; font-family: Arial; line-height: 1.4;}
     #loginPanel { position: absolute; top: 10px; right: 10px; background: rgba(0,0,0,0.6); color: white; padding: 10px; border-radius: 8px; font-family: Arial; }
-    #vagaPanel { position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 10px; border-radius: 8px; font-family: Arial; display: none; }
+    #vagaPanel { position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 10px; border-radius: 8px; font-family: Arial; display: none; pointer-events: auto; }
     #vagaPanel button { margin: 3px; padding: 6px 10px; }
     .hint { font-size: 12px; opacity: 0.85; }
 
     /* Controles mobile */
-    #mobileControls { position: absolute; bottom: 12px; right: 12px; display: none; gap: 8px; z-index: 10; }
-    #mobileControls .pad { display: grid; grid-template-columns: 50px 50px 50px; grid-template-rows: 50px 50px 50px; gap: 8px; justify-content: center; align-items: center; }
-    #mobileControls .zoom { display: grid; grid-auto-rows: 50px; gap: 8px; margin-left: 8px; }
-    #mobileControls button { border: none; border-radius: 12px; background: rgba(0,0,0,0.6); color: #fff; font-size: 18px; box-shadow: 0 4px 14px rgba(0,0,0,0.25); }
-    #mobileControls button:active { transform: scale(0.98); }
-   @media (max-width: 1024px) { 
-  #mobileControls { display: flex !important; }
+    #mobileControls {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%); /* centraliza no meio da tela */
+  display: none;
+  gap: 20px;
+  z-index: 10;
 }
+
+#mobileControls .pad {
+  display: grid;
+  grid-template-columns: 70px 70px 70px;  /* botões maiores */
+  grid-template-rows: 70px 70px 70px;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+#mobileControls .zoom {
+  display: grid;
+  grid-auto-rows: 70px;
+  gap: 12px;
+  margin-left: 12px;
+}
+
+#mobileControls button {
+  border: none;
+  border-radius: 20px;
+  background: rgba(0,0,0,0.3); /* mais transparente */
+  color: #fff;
+  font-size: 28px; /* ícones maiores */
+  box-shadow: 0 4px 14px rgba(0,0,0,0.25);
+}
+
+#mobileControls button:active {
+  transform: scale(0.95);
+}
+
+@media (max-width: 1024px) { 
+  #mobileControls { display: flex }
+}
+
     
   </style>
 </head>
@@ -160,8 +195,9 @@
   const MIN_Y = 1, MAX_Y = 100;
   scene.registerBeforeRender(()=>{ if(camera.position.y<MIN_Y)camera.position.y=MIN_Y; if(camera.position.y>MAX_Y)camera.position.y=MAX_Y; });
   // Ajustes para toque mobile
-camera.angularSensibility = 3000;   // mais suave no toque
-camera.panningSensibility = 80;     // melhora arrasto no touch
+camera.angularSensibility = 1500;   // mais suave no toque
+camera.panningSensibility = 40;     // melhora arrasto no touch
+camera.speed = 30;                 // aumenta velocidade da navegação
 
 
   const STEP = 5;
@@ -372,12 +408,17 @@ camera.panningSensibility = 80;     // melhora arrasto no touch
   canvas.addEventListener('contextmenu', (e)=> e.preventDefault());
 
   scene.onPointerObservable.add(async (pointerInfo)=>{
-      if(pointerInfo.type!==BABYLON.PointerEventTypes.POINTERPICK)return;
-      const pick=pointerInfo.pickInfo; if(!pick.hit)return;
-      const evt = pointerInfo.event || {};
+      if(pointerInfo.type !== BABYLON.PointerEventTypes.POINTERPICK) return;
+
+const pick = pointerInfo.pickInfo; 
+if(!pick || !pick.hit) return;
+
+const evt = pointerInfo.event || {};
+const isTouch = evt.pointerType === "touch";
+
 
       // ADMIN → Criar vaga com botão direito em qualquer ponto
-      if(role==='admin' && evt.button===2){
+      if(role==='admin' && (evt.button === 2 || (evt.pointerType === "touch" && evt.longPress))){
           const pos = pick.pickedPoint.clone(); pos.y+=0.01;
           const mesh = criarVagaContorno(pos);
           mesh.rotation.y = 0;
@@ -392,18 +433,58 @@ camera.panningSensibility = 80;     // melhora arrasto no touch
           return;
       }
 
-      // Movimentação ou seleção de vaga
-      if(moverAtivo && vagaSelecionada){
-          vagaSelecionada.mesh.position=pick.pickedPoint.clone().add(new BABYLON.Vector3(0,0.01,0));
-          if(vagaSelecionada.carro) posicionarSobreVaga(vagaSelecionada.carro,vagaSelecionada.mesh);
-          atualizarFirebase(vagaSelecionada,vagaSelecionada.id);
-          moverAtivo=false;
-      } else {
-          const pickedMesh = pick.pickedMesh;
-          const vaga = encontrarVagaPorMesh(pickedMesh);
-          if(vaga) selecionarVaga(vaga);
-      }
+// Movimentação ou seleção de vaga
+if(moverAtivo && vagaSelecionada){
+    vagaSelecionada.mesh.position=pick.pickedPoint.clone().add(new BABYLON.Vector3(0,0.01,0));
+    if(vagaSelecionada.carro) posicionarSobreVaga(vagaSelecionada.carro,vagaSelecionada.mesh);
+    atualizarFirebase(vagaSelecionada,vagaSelecionada.id);
+    moverAtivo=false;
+} else {
+    const pickedMesh = pick.pickedMesh;
+    const vaga = encontrarVagaPorMesh(pickedMesh);
+    if(vaga) selecionarVaga(vaga);
+}
+
   });
+let touchTimer = null;
+
+canvas.addEventListener("touchstart", (e) => {
+  if(role === "admin"){
+    touchTimer = setTimeout(() => {
+      const pick = scene.pick(scene.pointerX, scene.pointerY);
+      if(pick && pick.hit){
+        const pos = pick.pickedPoint.clone(); pos.y += 0.01;
+        const mesh = criarVagaContorno(pos);
+        mesh.rotation.y = 0;
+        if(mesh.material) mesh.material.diffuseColor = new BABYLON.Color3(0,1,0);
+        const ref = db.ref('vagas').push();
+        const id = ref.key;
+        const vaga = { mesh, ocupada:false, carro:null, id, carModel:null };
+        vagas.push(vaga);
+        ref.set({ x: pos.x, y: pos.y, z: pos.z, rotY:0, ocupada:false, carModel:null });
+        selecionarVaga(vaga);
+        atualizarPainel();
+      }
+    }, 800); // 800ms = toque longo
+  }
+});
+
+canvas.addEventListener("touchend", (e) => {
+  if(touchTimer){
+    clearTimeout(touchTimer);
+    touchTimer = null;
+  }
+
+  // Seleção de vaga com toque simples
+  const pick = scene.pick(scene.pointerX, scene.pointerY);
+  if(pick && pick.hit){
+    const vaga = encontrarVagaPorMesh(pick.pickedMesh);
+    if(vaga) selecionarVaga(vaga);
+  }
+});
+
+
+
 
   engine.runRenderLoop(()=>scene.render());
   window.addEventListener("resize",()=>engine.resize());
