--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   let moverAtivo = false;
   let role = "viewer";
   const PASSWORDS = { operator: "op123", admin: "admin123" };
-  const PARKING_MODEL_FILE = "modelo.glb"; 
+  const PARKING_MODEL_FILE = "modelo.obj"; 
   const CAR_BASE_URL = "https://linckrafael.github.io/cars3D/";
   const CAR_MODELS = ["car1.glb","car2.glb","car3.glb","car5.glb","car6.glb","car7.glb","car8.glb","car9.glb","car10.glb","car12.glb","car13.glb","car14.glb","car15.glb","car19.glb"];
   const VAGA_LARGURA = 4.0;
