--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   const PASSWORDS = { operator: "op123", admin: "admin123" };
   const PARKING_MODEL_FILE = "modelo.glb"; 
   const CAR_BASE_URL = "https://linckrafael.github.io/cars3D/";
-  const CAR_MODELS = ["car1.glb","car2.glb","car3.glb","car5.glb","car6.glb","car7.glb","car8.glb","car9.glb","car10.glb","car12.glb","car13.glb","car14.glb","car15.glb","car19.glb"];
+  const CAR_MODELS = ["car1.glb","car5.glb","car7.glb","car9.glb","car12.glb","car13.glb","car14.glb"];
   const VAGA_LARGURA = 4.0;
   const VAGA_COMPRIMENTO = 8.0;
   const VAGA_ALTURA = 2.0;
