--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
     }
 
     .brand {
-      display: flex; align-items: center; gap: 12px;
-      font-weight: 700; font-size: 24px;
+      display: flex; align-items: center; gap: 6px;
+      font-size: 16px;
+      font-weight: 700;
+      white-space: nowrap;
       background: linear-gradient(135deg, #3b82f6, #8b5cf6, #06b6d4);
       -webkit-background-clip: text; background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
     .metrics-grid {
-      display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px;
+      display: flex;
+      gap: 8px;
     }
 
     .metric-card {
@@ -73,23 +76,35 @@
       border: 1px solid rgba(59, 130, 246, 0.2);
       border-radius: 12px; padding: 12px 16px;
       text-align: center; min-width: 100px;
+      padding: 4px 6px;
+      min-width: auto;
     }
 
     .metric-value {
-      font-size: 24px; font-weight: 700;
+      font-size: 14px; font-weight: 700;
       background: linear-gradient(135deg, #3b82f6, #06b6d4);
       -webkit-background-clip: text; background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
     .metric-label {
-      font-size: 12px; opacity: 0.8; margin-top: 4px;
+      font-size: 10px; opacity: 0.8; margin-top: 4px;
       text-transform: uppercase; letter-spacing: 0.5px;
     }
 
-    .auth-section {
-      display: flex; align-items: center; gap: 12px;
-    }
+     .auth-section {
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    gap: 6px;
+  }
+
+#roleSelect, #userPass {
+   font-size: 11px;
+    padding: 4px 6px;
+    width: auto;
+    min-width: 80px;
+  }
 
     .role-badge {
       padding: 6px 12px; border-radius: 20px;
@@ -129,10 +144,11 @@
       color: #e2e8f0; padding: 12px;
       border-radius: 10px; cursor: pointer;
       transition: all 0.2s ease;
-      font-size: 12px; text-align: center;
+      font-size: 11px; text-align: center;
       display: flex; flex-direction: column;
       align-items: center; gap: 4px;
-      min-height: 60px; justify-content: center;
+      min-height: auto !important; justify-content: center;
+      padding: 4px 8px !important;
     }
 
     .tool-btn:hover, .action-btn:hover {
@@ -463,12 +479,18 @@
 
     /* ===== MOBILE OPTIMIZATIONS ===== */
 @media (max-width: 1024px) {
-  #smartDashboard { 
-    position: relative;
-    flex-direction: column; 
-    height: auto;
-    padding: 12px; 
-    gap: 12px;
+   
+#smartDashboard { 
+    position: fixed;  /* fica fixo no topo */
+    top: 0; left: 0; right: 0;
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 8px 10px;
+    gap: 8px;
+    z-index: 60; /* acima dos painéis */
   }
 
   .dashboard-section { 
@@ -947,8 +969,8 @@ if (isMobile) {
 
   // controles de toque
   camera.inputs.addTouch(); 
-  camera.speed = 1.0; 
-  camera.angularSensibility = 4000;
+  camera.speed = 4; 
+  camera.angularSensibility = 800;
 
   // limitar altura
   scene.onBeforeRenderObservable.add(() => {
