--- a/index.html
+++ b/index.html
@@ -1056,60 +1056,36 @@ function initializeScene() {
   
   // Câmera mais intuitiva
 if (isMobile) {
-  camera = new BABYLON.UniversalCamera("mobileCam", new BABYLON.Vector3(68, 140, 10), scene);
+  // ArcRotateCamera estilo Google Maps 3D
+  camera = new BABYLON.ArcRotateCamera(
+    "mobileCam",
+    BABYLON.Tools.ToRadians(90), // ângulo inicial horizontal
+    BABYLON.Tools.ToRadians(40),   // ângulo inicial vertical
+    120,                           // distância inicial
+    new BABYLON.Vector3(-60, 80, 0), // alvo (centro do estacionamento)
+    scene
+  );
+
   camera.attachControl(canvas, true);
-    camera.rotation.x = Math.PI / 4.5;
-    camera.rotation.y = 10.5;
 
-  // velocidade base
-  camera.speed = 1.0;
-  camera.angularSensibility = 4000; // sensibilidade da rotação
 
-  // limitações para não atravessar o chão
-  scene.onBeforeRenderObservable.add(() => {
-    if (camera.position.y < 2) camera.position.y = 2;
-  });
+  // ===== Configurações de sensibilidade =====
+  camera.panningSensibility = 50;      // arrastar com dois dedos = pan
+  camera.angularSensibilityX = 600;    // rotação horizontal suave
+  camera.angularSensibilityY = 600;    // rotação vertical suave
+  camera.pinchPrecision = 200;         // zoom com pinça mais suave
+  camera.wheelPrecision = 50;          // zoom com scroll
 
-  // ===== Gestos touch =====
-  let prevPinchDistance = null;
+  // ===== Limites =====
+  camera.lowerBetaLimit = BABYLON.Tools.ToRadians(10);  // não deixar "atravessar o chão"
+  camera.upperBetaLimit = BABYLON.Tools.ToRadians(85);  // limite do olhar de cima
+  camera.lowerRadiusLimit = 30;    // distância mínima
+  camera.upperRadiusLimit = 300;   // distância máxima
 
-  canvas.addEventListener("touchmove", (e) => {
-    if (e.touches.length === 1) {
-      // --- ROTACIONAR (um dedo arrastando) ---
-      const touch = e.touches[0];
-      if (lastPointerPosition) {
-        const offsetX = touch.clientX - lastPointerPosition.x;
-        const offsetY = touch.clientY - lastPointerPosition.y;
-
-        camera.rotation.y -= offsetX * 0.005; // gira lateral
-        camera.rotation.x -= offsetY * 0.005; // inclina cima/baixo
-      }
-      lastPointerPosition = { x: touch.clientX, y: touch.clientY };
-    } else if (e.touches.length === 2) {
-      // --- PINÇA / PAN (dois dedos) ---
-      const dx = e.touches[0].clientX - e.touches[1].clientX;
-      const dy = e.touches[0].clientY - e.touches[1].clientY;
-      const dist = Math.sqrt(dx * dx + dy * dy);
-
-      if (prevPinchDistance) {
-        const delta = dist - prevPinchDistance;
-
-        if (Math.abs(delta) > 0) {
-          // PINÇA = zoom
-          const forward = camera.getDirection(BABYLON.Axis.Z);
-          camera.position.addInPlace(forward.scale(delta * 0.02));
-        }
-      }
-      prevPinchDistance = dist;
-    }
-  });
-
-  canvas.addEventListener("touchend", () => {
-    lastPointerPosition = null;
-    prevPinchDistance = null;
-  });
-}
- else {
+  // ===== Movimento de pan =====
+  camera.panningInertia = 0.8;       // inércia suave
+  camera.panningSensibility = 60;    // sensibilidade ao arrastar com dois dedos
+}  else {
     // Desktop: Universal Camera mais intuitiva
     camera = new BABYLON.UniversalCamera("desktopCam", new BABYLON.Vector3(68, 80, -15), scene);
     camera.rotation.x = Math.PI / 5;
